QA HW4 Parser/LangParser.cpp

// Generated from Lang.g4 by ANTLR 4.13.2


#include "LangListener.h"

#include "LangParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct LangParserStaticData final {
  LangParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  LangParserStaticData(const LangParserStaticData&) = delete;
  LangParserStaticData(LangParserStaticData&&) = delete;
  LangParserStaticData& operator=(const LangParserStaticData&) = delete;
  LangParserStaticData& operator=(LangParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag langParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<LangParserStaticData> langParserStaticData = nullptr;

void langParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (langParserStaticData != nullptr) {
    return;
  }
#else
  assert(langParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<LangParserStaticData>(
    std::vector<std::string>{
      "function", "parameters", "paramdecl", "body", "returnstmt", "statement", 
      "ifstmt", "thenbody", "elsebody", "assign", "expression", "boolexpr5", 
      "binoplorexpr", "boolexpr4", "binoplandexpr", "boolexpr3", "intcompareexpr", 
      "boolexpr2", "unopnegateexpr", "boolexpr1", "boolliteral", "intexpr", 
      "binopintexpr", "atomintexpr", "intliteral", "varrefexpr", "type"
    },
    std::vector<std::string>{
      "", "'('", "')'", "':'", "'{'", "'}'", "','", "'return'", "'if'", 
      "'else'", "'='", "'true'", "'false'", "'bool'", "'int'", "", "'+'", 
      "'-'", "'<'", "'>'", "'&'", "'|'", "'!'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "TRUE", "FALSE", "BOOL", 
      "INT", "NUMBER", "BINOP_ADD", "BINOP_SUB", "BINOP_LT", "BINOP_GT", 
      "BINOP_LAND", "BINOP_LOR", "UNOP_NEGATION", "NAME", "WHITESPACE"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  langParserStaticData = std::move(staticData);
}

}

LangParser::LangParser(TokenStream *input) : LangParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

LangParser::LangParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  LangParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *langParserStaticData->atn, langParserStaticData->decisionToDFA, langParserStaticData->sharedContextCache, options);
}

LangParser::~LangParser() {
  delete _interpreter;
}

const atn::ATN& LangParser::getATN() const {
  return *langParserStaticData->atn;
}

std::string LangParser::getGrammarFileName() const {
  return "Lang.g4";
}

const std::vector<std::string>& LangParser::getRuleNames() const {
  return langParserStaticData->ruleNames;
}

const dfa::Vocabulary& LangParser::getVocabulary() const {
  return langParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView LangParser::getSerializedATN() const {
  return langParserStaticData->serializedATN;
}


//----------------- FunctionContext ------------------------------------------------------------------

LangParser::FunctionContext::FunctionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* LangParser::FunctionContext::NAME() {
  return getToken(LangParser::NAME, 0);
}

LangParser::ParametersContext* LangParser::FunctionContext::parameters() {
  return getRuleContext<LangParser::ParametersContext>(0);
}

LangParser::TypeContext* LangParser::FunctionContext::type() {
  return getRuleContext<LangParser::TypeContext>(0);
}

LangParser::BodyContext* LangParser::FunctionContext::body() {
  return getRuleContext<LangParser::BodyContext>(0);
}


size_t LangParser::FunctionContext::getRuleIndex() const {
  return LangParser::RuleFunction;
}

void LangParser::FunctionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunction(this);
}

void LangParser::FunctionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunction(this);
}

LangParser::FunctionContext* LangParser::function() {
  FunctionContext *_localctx = _tracker.createInstance<FunctionContext>(_ctx, getState());
  enterRule(_localctx, 0, LangParser::RuleFunction);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(54);
    match(LangParser::NAME);
    setState(55);
    match(LangParser::T__0);
    setState(56);
    parameters();
    setState(57);
    match(LangParser::T__1);
    setState(58);
    match(LangParser::T__2);
    setState(59);
    type();
    setState(60);
    match(LangParser::T__3);
    setState(61);
    body();
    setState(62);
    match(LangParser::T__4);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParametersContext ------------------------------------------------------------------

LangParser::ParametersContext::ParametersContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<LangParser::ParamdeclContext *> LangParser::ParametersContext::paramdecl() {
  return getRuleContexts<LangParser::ParamdeclContext>();
}

LangParser::ParamdeclContext* LangParser::ParametersContext::paramdecl(size_t i) {
  return getRuleContext<LangParser::ParamdeclContext>(i);
}


size_t LangParser::ParametersContext::getRuleIndex() const {
  return LangParser::RuleParameters;
}

void LangParser::ParametersContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParameters(this);
}

void LangParser::ParametersContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParameters(this);
}

LangParser::ParametersContext* LangParser::parameters() {
  ParametersContext *_localctx = _tracker.createInstance<ParametersContext>(_ctx, getState());
  enterRule(_localctx, 2, LangParser::RuleParameters);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(73);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case LangParser::T__1: {
        enterOuterAlt(_localctx, 1);

        break;
      }

      case LangParser::BOOL:
      case LangParser::INT: {
        enterOuterAlt(_localctx, 2);
        setState(65);
        paramdecl();
        setState(70);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == LangParser::T__5) {
          setState(66);
          match(LangParser::T__5);
          setState(67);
          paramdecl();
          setState(72);
          _errHandler->sync(this);
          _la = _input->LA(1);
        }
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParamdeclContext ------------------------------------------------------------------

LangParser::ParamdeclContext::ParamdeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

LangParser::TypeContext* LangParser::ParamdeclContext::type() {
  return getRuleContext<LangParser::TypeContext>(0);
}

tree::TerminalNode* LangParser::ParamdeclContext::NAME() {
  return getToken(LangParser::NAME, 0);
}


size_t LangParser::ParamdeclContext::getRuleIndex() const {
  return LangParser::RuleParamdecl;
}

void LangParser::ParamdeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParamdecl(this);
}

void LangParser::ParamdeclContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParamdecl(this);
}

LangParser::ParamdeclContext* LangParser::paramdecl() {
  ParamdeclContext *_localctx = _tracker.createInstance<ParamdeclContext>(_ctx, getState());
  enterRule(_localctx, 4, LangParser::RuleParamdecl);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(75);
    type();
    setState(76);
    match(LangParser::NAME);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BodyContext ------------------------------------------------------------------

LangParser::BodyContext::BodyContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

LangParser::ReturnstmtContext* LangParser::BodyContext::returnstmt() {
  return getRuleContext<LangParser::ReturnstmtContext>(0);
}

std::vector<LangParser::StatementContext *> LangParser::BodyContext::statement() {
  return getRuleContexts<LangParser::StatementContext>();
}

LangParser::StatementContext* LangParser::BodyContext::statement(size_t i) {
  return getRuleContext<LangParser::StatementContext>(i);
}


size_t LangParser::BodyContext::getRuleIndex() const {
  return LangParser::RuleBody;
}

void LangParser::BodyContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBody(this);
}

void LangParser::BodyContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBody(this);
}

LangParser::BodyContext* LangParser::body() {
  BodyContext *_localctx = _tracker.createInstance<BodyContext>(_ctx, getState());
  enterRule(_localctx, 6, LangParser::RuleBody);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(81);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == LangParser::T__7

    || _la == LangParser::NAME) {
      setState(78);
      statement();
      setState(83);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(84);
    returnstmt();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ReturnstmtContext ------------------------------------------------------------------

LangParser::ReturnstmtContext::ReturnstmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

LangParser::ExpressionContext* LangParser::ReturnstmtContext::expression() {
  return getRuleContext<LangParser::ExpressionContext>(0);
}


size_t LangParser::ReturnstmtContext::getRuleIndex() const {
  return LangParser::RuleReturnstmt;
}

void LangParser::ReturnstmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterReturnstmt(this);
}

void LangParser::ReturnstmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitReturnstmt(this);
}

LangParser::ReturnstmtContext* LangParser::returnstmt() {
  ReturnstmtContext *_localctx = _tracker.createInstance<ReturnstmtContext>(_ctx, getState());
  enterRule(_localctx, 8, LangParser::RuleReturnstmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(86);
    match(LangParser::T__6);
    setState(87);
    expression();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

LangParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

LangParser::IfstmtContext* LangParser::StatementContext::ifstmt() {
  return getRuleContext<LangParser::IfstmtContext>(0);
}

LangParser::AssignContext* LangParser::StatementContext::assign() {
  return getRuleContext<LangParser::AssignContext>(0);
}


size_t LangParser::StatementContext::getRuleIndex() const {
  return LangParser::RuleStatement;
}

void LangParser::StatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatement(this);
}

void LangParser::StatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatement(this);
}

LangParser::StatementContext* LangParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 10, LangParser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(91);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case LangParser::T__7: {
        enterOuterAlt(_localctx, 1);
        setState(89);
        ifstmt();
        break;
      }

      case LangParser::NAME: {
        enterOuterAlt(_localctx, 2);
        setState(90);
        assign();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IfstmtContext ------------------------------------------------------------------

LangParser::IfstmtContext::IfstmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

LangParser::Boolexpr5Context* LangParser::IfstmtContext::boolexpr5() {
  return getRuleContext<LangParser::Boolexpr5Context>(0);
}

LangParser::ThenbodyContext* LangParser::IfstmtContext::thenbody() {
  return getRuleContext<LangParser::ThenbodyContext>(0);
}

LangParser::ElsebodyContext* LangParser::IfstmtContext::elsebody() {
  return getRuleContext<LangParser::ElsebodyContext>(0);
}


size_t LangParser::IfstmtContext::getRuleIndex() const {
  return LangParser::RuleIfstmt;
}

void LangParser::IfstmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterIfstmt(this);
}

void LangParser::IfstmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitIfstmt(this);
}

LangParser::IfstmtContext* LangParser::ifstmt() {
  IfstmtContext *_localctx = _tracker.createInstance<IfstmtContext>(_ctx, getState());
  enterRule(_localctx, 12, LangParser::RuleIfstmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(93);
    match(LangParser::T__7);
    setState(94);
    match(LangParser::T__0);
    setState(95);
    boolexpr5();
    setState(96);
    match(LangParser::T__1);
    setState(97);
    match(LangParser::T__3);
    setState(98);
    thenbody();
    setState(99);
    match(LangParser::T__4);
    setState(100);
    match(LangParser::T__8);
    setState(101);
    match(LangParser::T__3);
    setState(102);
    elsebody();
    setState(103);
    match(LangParser::T__4);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ThenbodyContext ------------------------------------------------------------------

LangParser::ThenbodyContext::ThenbodyContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<LangParser::StatementContext *> LangParser::ThenbodyContext::statement() {
  return getRuleContexts<LangParser::StatementContext>();
}

LangParser::StatementContext* LangParser::ThenbodyContext::statement(size_t i) {
  return getRuleContext<LangParser::StatementContext>(i);
}


size_t LangParser::ThenbodyContext::getRuleIndex() const {
  return LangParser::RuleThenbody;
}

void LangParser::ThenbodyContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterThenbody(this);
}

void LangParser::ThenbodyContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitThenbody(this);
}

LangParser::ThenbodyContext* LangParser::thenbody() {
  ThenbodyContext *_localctx = _tracker.createInstance<ThenbodyContext>(_ctx, getState());
  enterRule(_localctx, 14, LangParser::RuleThenbody);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(108);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == LangParser::T__7

    || _la == LangParser::NAME) {
      setState(105);
      statement();
      setState(110);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ElsebodyContext ------------------------------------------------------------------

LangParser::ElsebodyContext::ElsebodyContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<LangParser::StatementContext *> LangParser::ElsebodyContext::statement() {
  return getRuleContexts<LangParser::StatementContext>();
}

LangParser::StatementContext* LangParser::ElsebodyContext::statement(size_t i) {
  return getRuleContext<LangParser::StatementContext>(i);
}


size_t LangParser::ElsebodyContext::getRuleIndex() const {
  return LangParser::RuleElsebody;
}

void LangParser::ElsebodyContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterElsebody(this);
}

void LangParser::ElsebodyContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitElsebody(this);
}

LangParser::ElsebodyContext* LangParser::elsebody() {
  ElsebodyContext *_localctx = _tracker.createInstance<ElsebodyContext>(_ctx, getState());
  enterRule(_localctx, 16, LangParser::RuleElsebody);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(114);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == LangParser::T__7

    || _la == LangParser::NAME) {
      setState(111);
      statement();
      setState(116);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AssignContext ------------------------------------------------------------------

LangParser::AssignContext::AssignContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* LangParser::AssignContext::NAME() {
  return getToken(LangParser::NAME, 0);
}

LangParser::ExpressionContext* LangParser::AssignContext::expression() {
  return getRuleContext<LangParser::ExpressionContext>(0);
}


size_t LangParser::AssignContext::getRuleIndex() const {
  return LangParser::RuleAssign;
}

void LangParser::AssignContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAssign(this);
}

void LangParser::AssignContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAssign(this);
}

LangParser::AssignContext* LangParser::assign() {
  AssignContext *_localctx = _tracker.createInstance<AssignContext>(_ctx, getState());
  enterRule(_localctx, 18, LangParser::RuleAssign);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(117);
    match(LangParser::NAME);
    setState(118);
    match(LangParser::T__9);
    setState(119);
    expression();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExpressionContext ------------------------------------------------------------------

LangParser::ExpressionContext::ExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

LangParser::IntexprContext* LangParser::ExpressionContext::intexpr() {
  return getRuleContext<LangParser::IntexprContext>(0);
}

LangParser::Boolexpr5Context* LangParser::ExpressionContext::boolexpr5() {
  return getRuleContext<LangParser::Boolexpr5Context>(0);
}


size_t LangParser::ExpressionContext::getRuleIndex() const {
  return LangParser::RuleExpression;
}

void LangParser::ExpressionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExpression(this);
}

void LangParser::ExpressionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExpression(this);
}

LangParser::ExpressionContext* LangParser::expression() {
  ExpressionContext *_localctx = _tracker.createInstance<ExpressionContext>(_ctx, getState());
  enterRule(_localctx, 20, LangParser::RuleExpression);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(123);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(121);
      intexpr();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(122);
      boolexpr5();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Boolexpr5Context ------------------------------------------------------------------

LangParser::Boolexpr5Context::Boolexpr5Context(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

LangParser::Boolexpr4Context* LangParser::Boolexpr5Context::boolexpr4() {
  return getRuleContext<LangParser::Boolexpr4Context>(0);
}

LangParser::BinoplorexprContext* LangParser::Boolexpr5Context::binoplorexpr() {
  return getRuleContext<LangParser::BinoplorexprContext>(0);
}


size_t LangParser::Boolexpr5Context::getRuleIndex() const {
  return LangParser::RuleBoolexpr5;
}

void LangParser::Boolexpr5Context::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBoolexpr5(this);
}

void LangParser::Boolexpr5Context::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBoolexpr5(this);
}

LangParser::Boolexpr5Context* LangParser::boolexpr5() {
  Boolexpr5Context *_localctx = _tracker.createInstance<Boolexpr5Context>(_ctx, getState());
  enterRule(_localctx, 22, LangParser::RuleBoolexpr5);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(127);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(125);
      boolexpr4();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(126);
      binoplorexpr();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BinoplorexprContext ------------------------------------------------------------------

LangParser::BinoplorexprContext::BinoplorexprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

LangParser::Boolexpr4Context* LangParser::BinoplorexprContext::boolexpr4() {
  return getRuleContext<LangParser::Boolexpr4Context>(0);
}

tree::TerminalNode* LangParser::BinoplorexprContext::BINOP_LOR() {
  return getToken(LangParser::BINOP_LOR, 0);
}

LangParser::Boolexpr5Context* LangParser::BinoplorexprContext::boolexpr5() {
  return getRuleContext<LangParser::Boolexpr5Context>(0);
}


size_t LangParser::BinoplorexprContext::getRuleIndex() const {
  return LangParser::RuleBinoplorexpr;
}

void LangParser::BinoplorexprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBinoplorexpr(this);
}

void LangParser::BinoplorexprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBinoplorexpr(this);
}

LangParser::BinoplorexprContext* LangParser::binoplorexpr() {
  BinoplorexprContext *_localctx = _tracker.createInstance<BinoplorexprContext>(_ctx, getState());
  enterRule(_localctx, 24, LangParser::RuleBinoplorexpr);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(129);
    boolexpr4();
    setState(130);
    match(LangParser::BINOP_LOR);
    setState(131);
    boolexpr5();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Boolexpr4Context ------------------------------------------------------------------

LangParser::Boolexpr4Context::Boolexpr4Context(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

LangParser::Boolexpr3Context* LangParser::Boolexpr4Context::boolexpr3() {
  return getRuleContext<LangParser::Boolexpr3Context>(0);
}

LangParser::BinoplandexprContext* LangParser::Boolexpr4Context::binoplandexpr() {
  return getRuleContext<LangParser::BinoplandexprContext>(0);
}


size_t LangParser::Boolexpr4Context::getRuleIndex() const {
  return LangParser::RuleBoolexpr4;
}

void LangParser::Boolexpr4Context::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBoolexpr4(this);
}

void LangParser::Boolexpr4Context::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBoolexpr4(this);
}

LangParser::Boolexpr4Context* LangParser::boolexpr4() {
  Boolexpr4Context *_localctx = _tracker.createInstance<Boolexpr4Context>(_ctx, getState());
  enterRule(_localctx, 26, LangParser::RuleBoolexpr4);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(135);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(133);
      boolexpr3();
      break;
    }
